5
===
Added rainbow effect (andremossinato)
Side number for regular polygon can be choosen (alexandre)
New shape available: Heart (andremossinato)

4
===
Now paste and copy are integrated to Sugar (pekayatt)
Colors now are choosen from a ColorButton. Selected color is shown, not its name (alexandre)
Adjust in Undo/Redo functions, now we have a limit (on 10 times) (pekayatt)
New past and copy funcions, improvements on selection func (pekayatt)
Fixed bug with pixmap_temp
New FILL fuction, linked to C module (pekayatt)
Color list in Area.py is not used anymore. Toolbox.py now passes a gdk.Color (nathalia.sautchuk, alexandre)
Fixed Cursors errors (nathalia.sautchuk)
Fixed Image load bug, now enableUndo is working with it (pekayatt)
Added COPYING (alexandre)
Fixed bug that corrupted colors in toolbox.py (alexandre)
Adding file header and cleaning unused files (nathalia.sautchuk)
Tools assigned by string instead of numbers (nathalia.sautchuk)
Changing and Adding new colors (nathalia.sautchuk)
ToolsToolbar now keeps color and size when user chooses different tools (alexandre)
Adding new cursors (nathalia.sautchuk)
New selection, the selectionbox remains (pekayatt)
Fixed line size (nathalia.sautchuk, alexandre)
Implemented Eraser shapes (nathalia.sautchuk)
Fixed undo bugs and new selection function (pekayatt)
Trapezoid and triangle functions added, minor changes on fill function, bug on fuction undo solved (andre)
Fill function changed (alexandre)

3
===
Addition of a new SVG Icon with fixes to some bugs. Project name changed from Oficina to Paint

2
===
Make it work with python setup.py: John Palmeiri and Manusheel Gupta

1
===
First Sugar Version: joyce, andremossinato, pekayatt, barbolo, nathalia.sautchuk, alexandre from LSI Research Group, University of São Paulo, Brazil with manusheel gupta(manu@laptop.org) and Eben Eliason(eben@laptop.org)from OLPC, Cambridge
