@@ -808,3 +808,7 @@ class Area(gtk.DrawingArea):
             
         self.queue_draw()
         
+    def clear(self):
+        self.d.clear()
+        self.enableUndo(self)
+        
