@@ -1,5 +1,6 @@
 5
 ===
+Added 'Clear' button (alexandre)
 Added rainbow effect (andremossinato)
 Side number for regular polygon can be choosen (alexandre)
 New shape available: Heart (andremossinato)
